added pieces & event-listener-based animation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Racing game</title>
+  <title>Dot racer</title>
 
   <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
@@ -17,19 +17,20 @@
 
 </head>
 
-<body>
-
-  <span>
-    <h1 class="text-center">RACING GAME</h1>
-  </span>
-
-  <hr>
-
-  <div class="starting-line">
+<div class="container">
+  <h1 class="text">Dot racer</h1>
+  <br>
+  <div class="track">
+    <div class="row" id="blue-track">
+      <img src="images/blue-dot.png" id="blue-dot">
+    </div>
+    <div class="row" id="red-track">
+      <img src="images/red-dot.png" id="red-dot">
+    </div>
   </div>
+  <br>
 
-  <div class="finish-line">
-  </div>
+<button type="button" class="btn btn-default text">New game</button>
 
 </body>
 </html>
