playing around with having the pieces inflate

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   <br>
   <div class="track">
     <div class="row" id="blue-track">
-      <img src="images/blue-dot.png" id="blue-dot">
+      <img src="images/blue-dot.png" alt="a blue dot" id="blue-dot">
     </div>
     <div class="row" id="red-track">
-      <img src="images/red-dot.png" id="red-dot">
+      <img src="images/red-dot.png" alt="a red dot" id="red-dot">
     </div>
   </div>
   <br>
