undid the blob test, added funny movements

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Dot racer</title>
+  <title>Dot blob</title>
 
   <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
@@ -18,7 +18,7 @@
 </head>
 
 <div class="container">
-  <h1 class="text">Dot racer</h1>
+  <h1 class="text">Dot blob</h1>
   <br>
   <div class="track">
     <div class="row" id="blue-track">
