now with third dot

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Dot blob</title>
+  <title>Dot racer</title>
 
   <link type="text/css" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
@@ -18,14 +18,15 @@
 </head>
 
 <div class="container">
-  <h1 class="text">Dot blob</h1>
+  <h1 class="text">Dot racer</h1>
   <br>
   <div class="track">
-    <div class="row" id="blue-track">
+    <!-- <div class="row" id="blue-track"> -->
       <img src="images/blue-dot.png" alt="a blue dot" id="blue-dot">
-    </div>
-    <div class="row" id="red-track">
+    <!-- </div>
+    <div class="row" id="red-track"> -->
       <img src="images/red-dot.png" alt="a red dot" id="red-dot">
+        <img src="images/yellow-dot.png" alt="a yellow dot" id="yellow-dot">
     </div>
   </div>
   <br>
