removed yellow dot, simplified

--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
     <!-- </div>
     <div class="row" id="red-track"> -->
       <img src="images/red-dot.png" alt="a red dot" id="red-dot">
-        <img src="images/yellow-dot.png" alt="a yellow dot" id="yellow-dot">
+        <!-- <img src="images/yellow-dot.png" alt="a yellow dot" id="yellow-dot"> -->
     </div>
   </div>
   <br>
 
-<button type="button" class="btn btn-default text">New game</button>
+
+<!-- <button type="button" class="btn btn-default text">New game</button> -->
+    <!-- <div class="verticalLine" id="finishLine"></div> -->
+
 
 </body>
 </html>
