left some files off the previous commit

--- a/index.html
+++ b/index.html
@@ -16,25 +16,26 @@
   <script type="text/javascript" src="scripts/app.js"></script>
 
 </head>
+<body>
+  <div class="container">
+    <h1 class="text">Dot racer</h1>
+    <br>
+    <div>
+      <p>
+       Race to the edge of the screen! Blue plays with the "q" key. Red plays with the "p" key.
+      </p>
+      <div id="results-box"></div>
+    </div>
 
-<div class="container">
-  <h1 class="text">Dot racer</h1>
-  <br>
-  <div class="track">
-    <!-- <div class="row" id="blue-track"> -->
-      <img src="images/blue-dot.png" alt="a blue dot" id="blue-dot">
-    <!-- </div>
-    <div class="row" id="red-track"> -->
-      <img src="images/red-dot.png" alt="a red dot" id="red-dot">
-        <!-- <img src="images/yellow-dot.png" alt="a yellow dot" id="yellow-dot"> -->
+    <div id="track">
+
+        <img src="images/blue-dot.png" alt="a blue dot" id="blue-dot">
+
+        <img src="images/red-dot.png" alt="a red dot" id="red-dot">
+
     </div>
   </div>
   <br>
-
-
-<!-- <button type="button" class="btn btn-default text">New game</button> -->
-    <!-- <div class="verticalLine" id="finishLine"></div> -->
-
-
+  <button class="btn">new game</button>
 </body>
 </html>
