tweaked results box, removed unnecessary styling

--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
   <div class="container">
     <h1 class="text">Dot racer</h1>
     <br>
-    <div>
+    <div id="results-box">
       <p>
-       Race to the edge of the screen! Blue plays with the "q" key. Red plays with the "p" key.
+       Race to the edge of the screen! Blue plays with the "p" key. Red plays with the "q" key.
       </p>
-      <div id="results-box"></div>
     </div>
 
-    <div id="track">
+    <div class="col-xs-4" id="track">
 
         <img src="images/blue-dot.png" alt="a blue dot" id="blue-dot">
 
