--- a/index.html
+++ b/index.html
@@ -18,23 +18,18 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="text">Dot racer</h1>
+    <h1>DOT RACER</h1>
     <br>
     <div id="results-box">
-      <p>
        Race to the edge of the screen! Blue plays with the "p" key. Red plays with the "q" key.
-      </p>
     </div>
-
-    <div class="col-xs-4" id="track">
-
+    <br>
+    <div id="track">
         <img src="images/blue-dot.png" alt="a blue dot" id="blue-dot">
-
         <img src="images/red-dot.png" alt="a red dot" id="red-dot">
-
     </div>
   </div>
   <br>
-  <button class="btn">new game</button>
+  <button class="btn hidden">New game</button>
 </body>
 </html>
