added animations for wins

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 </head>
 <body>
+  <img src="images/lines.jpg" alt="pattern" id="winners-circle">
   <div class="container">
     <h1>DOT RACER</h1>
     <br>
@@ -30,6 +31,6 @@
     </div>
   </div>
   <br>
-  <button class="btn hidden">New game</button>
+  <!-- <button class="btn">New game</button> -->
 </body>
 </html>
