testing reset button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <img src="images/lines.jpg" alt="pattern" id="winners-circle">
   <div class="container">
-    <h1>DOT RACER</h1>
+    <span id="name-of-the-game">Dot Racer</span>
     <br>
     <div id="results-box">
        Race to the edge of the screen! Blue plays with the "p" key. Red plays with the "q" key.
@@ -31,6 +31,6 @@
     </div>
   </div>
   <br>
-  <!-- <button class="btn">New game</button> -->
+  <button class="btn btn-default">New game</button>
 </body>
 </html>
