removed refresh, final tweaks

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
     </div>
   </div>
   <br>
-  <button class="btn btn-default">New game</button>
+  <!-- <button class="btn btn-default">New game</button> -->
 </body>
 </html>
